[package]
name = "chademo-rs"
version = "0.1.1"
edition = "2021"
authors = ["Rand <dint04wooded@icloud.com>"]
description = "An embedded-hal crate for bi-directional CHAdeMO EV charging based on IEEE Std 2030.1.1-2021"
repository = "https://github.com/rand12345/chademo-rs"
license = "MIT"
readme = "README.md"
keywords = ["embedded", "bidirectional", "embedded", "chademo", "charger"]
categories = ["embedded", "no-std"]
homepage = "https://rand12345.github.io"

[features]
default = ["eh0"]
eh1 = ["embedded-can"]
eh0 = ["embedded-hal"]

[dependencies]
embedded-can = { version = "0.4", optional = true }
embedded-hal = { version = "0.2.7", optional = true }
